doing login, register

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.jpa.hibernate.ddl-auto = none
 #logging.level.org.hibernate = ERROR
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto= update
+
+logging.file.path=D:\\HK9\\DAN\\fetour\\public\\asset\\images
+file.upload-dir = D:\\HK9\\DAN\\fetour\\public\\asset\\images
+#server.tomcat.basedir=D:\\HK9\\DAN\\fetour\\public\\asset\\images
+#spring.servlet.multipart.location=D:\\HK9\\DAN\\fetour\\public\\asset\\images
+spring.config.location=D:\\HK9\\DAN\\fetour\\public\\asset\\images
+#spring.web.resources.static-locations=D:\\HK9\\DAN\\fetour\\public\\asset\\images
