--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = none
+#spring.jpa.hibernate.ddl-auto = none
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #logging.level.org.hibernate = ERROR
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto= update
+
+
